# csvlint-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  test.yml
src/: lib.rs  main.rs
