[package]
name = "csvlint"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CSV linter that validates CSV files according to RFC 4180"
license = "MIT"

[[bin]]
name = "csvlint"
path = "src/main.rs"

[dependencies]
csv = "1.3"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0" 