[package]
name = "csvlint"
version = "1.0.0"
edition = "2024"
authors = ["blackstar257 <4362234+blackstar257@users.noreply.github.com>"]
description = "A CSV linter that validates CSV files according to RFC 4180"
license = "MIT"

[[bin]]
name = "csvlint"
path = "src/main.rs"

[dependencies]
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
